  - The core units have been converted to modules under the "chicken"
    namespace.

4.10.2

- Security fixes
  - Specialisation rules for string-{ref,set!}, bit-set?
    and move-memory no longer use unchecked C functions which could
    result in undefined behaviour, including buffer overruns (#1216).

- Platform support
  - CHICKEN now supports the Linux X32 ABI (thanks to Sven Hartrumpf).

4.10.1

- Core libraries
  - try-compile from setup-api cleans up temporary output files (#1213).

- Runtime system:
  - The calling convention of CPS procedures has been changed to
    use "argument vectors" instead of C calling convention.
  - The C API of C_values(), C_do_apply() and how to invoke CPS
    functions has changed.  The C_procN() macros have disappeared.
    The manual example in "Accessing external objects" for C_values
    has been updated.  See also the "numbers" egg for examples on
    how to support pre- and post-4.10.1 CHICKENs simultaneously.
  - Apply hack is no longer used; the limitation of 128 arguments
    has been lifted for platforms which had no apply hack.
  - Increased the "binary compatibility version" to 8.

4.10.0

- Security fixes
  - CVE-2014-6310: Use POSIX poll() on Android platform to avoid
    potential select() buffer overrun.
  - CVE-2014-9651: substring-index[-ci] no longer scans beyond string
    boundaries.
  - CVE-2015-4556: string-translate* no longer scans beyond string
    boundaries.

- Core libraries
  - alist-ref from unit data-structures now gives an error when passed
    a non-list, for consistency with assv/assq/assoc.
  - Unit tcp now implicitly depends on ports instead of extras.
     This may break programs which don't use modules and forgot to
     require extras but use procedures from it.
  - SRFI-13: fix string-copy! in cases source and destination strings'
    memory areas overlap (#1135).
  - SRFI-1: Check argument types in lset and list= procedures (#1085).