@@ -452,6 +452,17 @@ for %%s in (100000 120000 200000 250000 300000 350000 400000 450000 500000) do (
   if errorlevel 1 exit /b 1
 )
 
+echo ======================================== heap literal stress test ...
+%compile% heap-literal-stress-test.scm
+if errorlevel 1 exit /b 1
+
+for %%s in (100000 120000 200000 250000 300000 350000 400000 450000 500000) do (
+  echo %%s
+  a.out -:hi%%s
+  if errorlevel 1 exit /b 1
+)
+
+
 echo ======================================== symbol-GC tests ...
 %compile% symbolgc-tests.scm
 if errorlevel 1 exit /b 1
